plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

apply from: 'publish.gradle'

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15

}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

version '0.2-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation project(':samples')
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

javadoc{
    source = sourceSets.main.allJava
    options {
        addBooleanOption('-enable-preview', true)
        addStringOption('-release', '15')
        addStringOption('link', 'https://docs.oracle.com/en/java/javase/15/docs/api/')
    }
}